objects/AcctSeed__Exchange_Rate__c/AcctSeed__Exchange_Rate__c.object-meta.xml
<CustomObject>
    <label>Exchange Rate</label>
    <nameField>
        <displayFormat>ERT-{0000000}</displayFormat>
        <label>Exchange Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>