objects/AcctSeed__Exchange_Rate__c/fields/AcctSeed__Effective_To__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Effective_To__c</fullName>
    <description>Rate is effective to this date.</description>
    <formula>IF(ISBLANK(AcctSeed__Next_Exchange_Rate__c), null, AcctSeed__Next_Exchange_Rate__r.AcctSeed__Effective_From__c - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This rate is effective to this date.</inlineHelpText>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>