objects/AcctSeed__Exchange_Rate__c/fields/AcctSeed__Next_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Next_Exchange_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Exchange Rate</label>
    <referenceTo>AcctSeed__Exchange_Rate__c</referenceTo>
    <relationshipLabel>Exchange Rates</relationshipLabel>
    <relationshipName>Exchange_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>