objects/AcctSeed__Exchange_Rate__c/fields/AcctSeed__Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Rate_Type__c</fullName>
    <description>Identifier for the kind of exchange rate imported from a bank or entered manually, in other words, is the rate a Current Rate, Monthly Average Rate, Historical Rate, etc.</description>
    <inlineHelpText>Identifier for the kind of exchange rate imported from a bank or entered manually, in other words, is the rate a Current Rate, Monthly Average Rate, Historical Rate, etc.</inlineHelpText>
    <label>Rate Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__Rate_Type</valueSetName>
    </valueSet>
</CustomField>