objects/AcctSeed__Exchange_Rate__c/fields/AcctSeed__To_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__To_Currency_Code__c</fullName>
    <description>Relative currency in a currency pair. For example if the rate for CAD/USD = .78, this means that 1 Canadian Dollar is exchanged for .78 US Dollars. CAD is the base currency and USD is the relative currency.</description>
    <inlineHelpText>Relative currency in a currency pair. For example if the rate for CAD/USD = .78, this means that 1 Canadian Dollar is exchanged for .78 US Dollars. CAD is the base currency and USD is the relative currency.</inlineHelpText>
    <label>To Currency Code (ISO)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__Currency</valueSetName>
    </valueSet>
</CustomField>